	* main.c (path_environ): If value from environment was empty,
	set it to the default.  This is how gawk has behaved since 2.10.

2014-10-13         Arnold D. Robbins     <arnold@skeeve.com>

	* regcomp.c (__re_error_msgid): Make error message for REG_EBRACK
	more helpful - also used for unmatched [:, [., [=.
	Thanks to Davide Brini for raising the issue.

2014-10-12         Arnold D. Robbins     <arnold@skeeve.com>

	* README: Remove Pat Rankin from VMS duties, per his request.

2014-10-08         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2014-10-05         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pprint): Fix typo in header. Sheesh.

2014-10-04         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pp_string_fp): Fix breaklines case to actually
	output the current letter. This broke at gawk 4.0.0. Sigh.
	Thanks to Bert Bos (bert@w3.org) for the report.

2014-09-29         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* main.c (main): In optlist, it should say "h", not "h:", since there
	is no argument for the help option.  Thanks to Joep van Delft for
	the bug report.

2014-09-29         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h: Minor edits to sync with documentation. Does not
	influence the behavior of the API.

2014-09-28         Arnold D. Robbins     <arnold@skeeve.com>

	* command.y (cmdtab): Add "where" as an alias for "backtrace".
	Finally!

	Unrelated:

	* dfa.c: Sync with GNU grep.

2014-09-27         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (check_for_bad): Bitwise-and the bad character with 0xFF
	to avoid sign extension into a large integer.

	Unrelated:

	* configure.ac: Add an option to enable locale letters in identifiers.
	Undocumented and subject to being rescinded at any time in the future.
	* NEWS: Mention to look at configure --help.

	Unrelated:

	* profile.c (pprint): Use "rule(s)" instead of "block(s)" in the
	header.
