@@ -48,6 +48,21 @@
 extern "C" {
 #endif
 
+#ifdef __KLIBC__
+/* OS/2 kLIBC has already getopt(). So to avoid name clash, rename
+   them here. */
+
+# define optarg		gawk_optarg
+# define optind		gawk_optind
+# define opterr		gawk_opterr
+# define optopt		gawk_optopt
+
+# define getopt				gawk_getopt
+# define getopt_long		gawk_getopt_long
+# define getopt_long_only	gawk_getopt_long_only
+#endif
+
+
 /* For communication from `getopt' to the caller.
    When `getopt' finds an option that takes an argument,
    the argument value is returned here.
