@@ -1,3 +1,9 @@
+2014-10-12         KO Myung-Hun          <komh78@gmail.com>
+
+	Fixes for OS/2:
+
+	* gawkmisc.pc (init_sockets): Add additional checks for __EMX__.
+
 2014-09-23         Scott Deifik  <scottd.mail@sbcglobal.net>
 
 	* Makefile.tst: Sync with mainline.
